--- a/src/components/search/search.style.css
+++ b/src/components/search/search.style.css
@@ -1,3 +1,5 @@
-.searchContainer {
- background-color: aqua;
+.searchContainer input {
+ color: var(--colour-main-dark);
+ padding: 0.25rem 1rem;
+ border: 0.1rem solid var(--colour-main-dark);
 }
