--- a/src/components/button/button.style.css
+++ b/src/components/button/button.style.css
@@ -4,14 +4,21 @@
  color: var(--colour-main-light);
  border: 0.2em solid #5f4528;
  border-radius: 1em;
- padding: 1em 5em;
+ padding: 1em 2em;
  box-shadow: 0px 5px 10px #5f4528;
- margin: 1rem 0;
+ margin: 1rem 0.5rem;
  transition: all 300ms ease-out;
+ max-width: 90%;
 }
 
 .buttonContainer:hover {
  box-shadow: 2px 10px 10px #5f4528;
  text-shadow: 1px 1px 10px #ffffff;
  transform: translateY(-5px);
+}
+
+@media(min-width:650px) {
+ .buttonContainer {
+  padding: 1em 5em;
+ }
 }
