--- a/src/components/profileCard/profileCard.style.css
+++ b/src/components/profileCard/profileCard.style.css
@@ -42,10 +42,12 @@
  }
 
  .userInformation {
- text-align: center;
+  text-align: center;
  }
+
  .userCardButtons {
   text-align: center;
   max-width: 100%;
+  padding: 0.5rem 0;
  }
 }
