--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,57 @@ body {
  background-color: var(--colour-main-light);
  color: var(--colour-accent);
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+ -webkit-box-shadow: 0 0 0 30px var(--colour-main-light) inset !important;
+}
+
+input:focus {
+ outline: none;
+}
+
+input {
+ background-color: var(--colour-main-light);
+ color: var(--colour-black);
+ font-family: 'Oswald', sans-serif;
+ font-size: 1rem;
+ border: none;
+ border-bottom: 1px solid var(--colour-main-dark);
+ padding: 0.5rem 1rem;
+}
+
+input::placeholder {
+ opacity: 0.7;
+ color: var(--colour-accent);
+}
+
+input[type="checkbox"] {
+ accent-color: var(--colour-accent);
+}
+
+ol {
+ padding: 0;
+}
+
+/* help classes */
+a.link,
+p.link {
+ display: inline-block;
+ text-decoration: none;
+ padding: 0.5rem 1rem;
+ min-width: 20%;
+ text-align: center;
+}
+
+.center {
+ margin: 0 auto;
+ text-align: center;
+}
+
+.bolded {
+ font-weight: 700;
+ font-size: 1rem;
+}
