--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,24 @@ ol {
  padding: 0;
 }
 
+textarea {
+ background-color: var(--colour-main-light);
+ font-family: 'Oswald', sans-serif;
+ font-size: 1rem;
+ border: 1px solid var(--colour-main-dark);
+ border-radius: 0.5rem;
+ padding: 0.25rem;
+}
+
+textarea:focus {
+ outline: none;
+}
+
+textarea::placeholder {
+ opacity: 0.7;
+ color: var(--colour-accent);
+}
+
 /* help classes */
 a.link,
 p.link {
