cleaning up and start on adding holiday interval to holiday reqest

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,10 @@ body {
  color: var(--colour-accent);
 }
 
+h1{
+ text-align: center;
+}
+
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
